[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.21"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "state-trace-rpc" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "state-trace-rpc" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "state-trace-rpc" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }

[features]
default = []
runtime-benchmarks = []
